Archive2/7d/d0a81778e25ffc/output
main.cpp: In substitution of 'template<class T, class ... Ts> using Tail2 = Set<Ts ...> [with T = Ts ...; Ts = {Ts ...}]':
main.cpp:14:26:   required from here
main.cpp:8:25: error: template argument 1 is invalid
 using Tail2 = Set<Ts...>;
                         ^
main.cpp:17:1: error: 'Test2' does not name a type
 Test2<int, char, double> t2;
 ^
